add files after alter

--- a/html/Armin-trip-categories.html
+++ b/html/Armin-trip-categories.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/all.min.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css.map">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 
 </head>
 <body>
@@ -19,6 +20,11 @@
     <section class="header header-armintrip ">
         <div class="container-header-categories ">
             <div class="icone-header ">
+                <div class=" title-categories ">
+                    <h1> مزات طوبى الساخنة  </h1>
+                    <p>  هنا سيتم وصف القسم بكلمات بسيطة وباسلوب تحفز المستخرم للشراء يحتوي هذا القسم على انواع السلطة اللذيذة بانواع مختلفة ولذيذة وبأطباق متعددة  
+                    </p>
+              </div>
                 <!-- <img src="../images/icons/instgram-icon-wiht.svg"    width="50px" alt="">
                 <img src="../images/icons/logo-witht.svg" width="90px"  alt=""> -->
             </div>
