--- a/html/Tuba-cloud-categories.html
+++ b/html/Tuba-cloud-categories.html
@@ -16,8 +16,13 @@
     <section class="header header-cloude " data-aos-duration="1000">
         <div class="container-header-categories" data-aos="fade-up">
             <div class="icone-header " data-aos="fade-up">
-                <img src="../images/icons/instgram-icon-wiht.svg"    width="50px" alt="">
-                <img src="../images/icons/logo-witht.svg" width="90px"  alt="">
+                <div class=" title-categories ">
+                    <h1> مزات طوبى باردة  </h1>
+                    <p>  هنا سيتم وصف القسم بكلمات بسيطة وباسلوب تحفز المستخرم للشراء يحتوي هذا القسم على انواع السلطة اللذيذة بانواع مختلفة ولذيذة وبأطباق متعددة  
+                    </p>
+              </div>
+                <!-- <img src="../images/icons/instgram-icon-wiht.svg"    width="50px" alt="">
+                <img src="../images/icons/logo-witht.svg" width="90px"  alt=""> -->
             </div>
            
                 <!-- <h1>  مزات طوبى البادرة  </h1> -->
@@ -30,16 +35,16 @@
    <section class="gallary py-3 px-0  ">
      <div class="container-fluid">
             <div class="row p-2 border-bottom " data-aos-duration="500" data-aos="fade-up">
-                <div class="col col-4"  >
-                    <img src="../images/مزات طوبى الساخنة/tubahot-1.png" class=" gallery-item img-thumbnail " alt=""> 
+                <div class="col col-5"  >
+                    <img src="../images/مزات طوبى الساخنة/tubahot-1.png" class=" gallery-item " alt=""> 
                 </div>
                 <div class="col mmm"  >
                     <img src="../images/مزات طوبى باردة/tuba-cloud-1.png" class="gallery-item  " alt=""> 
                 </div>
             </div> 
             <div class="row p-2 border-bottom" data-aos-duration="500" data-aos="fade-up">
-                <div class="col col-4 " >
-                    <img src="../images/مزات طوبى الساخنة/tubahot-2.png" class=" gallery-item img-thumbnail " alt=""> 
+                <div class="col col-5 " >
+                    <img src="../images/مزات طوبى الساخنة/tubahot-2.png" class=" gallery-item  " alt=""> 
                 </div>
 
                 <div class="col mmm"  >
@@ -48,8 +53,8 @@
             </div> 
 
             <div class="row p-2 border-bottom" data-aos-duration="500" data-aos="fade-up">
-                <div class="col col-4 "  >
-                    <img src="../images/مزات طوبى الساخنة/tubahot-3.png" class=" gallery-item img-thumbnail " alt=""> 
+                <div class="col col-5"  >
+                    <img src="../images/مزات طوبى الساخنة/tubahot-3.png" class=" gallery-item  " alt=""> 
                 </div>
                 <div class="col mmm" >
                     <img src="../images/مزات طوبى باردة/tuba-cloud-3.png" class="gallery-item  " alt=""> 
@@ -57,8 +62,8 @@
             </div> 
 
             <div class="row p-2 border-bottom" data-aos-duration="500" data-aos="fade-up">
-                <div class="col col-4 "  >
-                    <img src="../images/مزات طوبى الساخنة/tubahot-4.png" class=" gallery-item img-thumbnail " alt=""> 
+                <div class="col col-5"  >
+                    <img src="../images/مزات طوبى الساخنة/tubahot-4.png" class=" gallery-item  " alt=""> 
                 </div>
                 <div class="col mmm"  >
                     <img src="../images/مزات طوبى باردة/tuba-cloud-4.png" class="gallery-item  " alt=""> 
@@ -66,8 +71,8 @@
             </div> 
             
             <div class="row p-2 border-bottom " data-aos-duration="500" data-aos="fade-up">
-                <div class="col col-4 ">
-                    <img src="../images/مزات طوبى الساخنة/tubahot-5.png" class=" gallery-item img-thumbnail " alt=""> 
+                <div class="col col-5">
+                    <img src="../images/مزات طوبى الساخنة/tubahot-5.png" class=" gallery-item " alt=""> 
                 </div>
                 <div class="col mmm" >
                     <img src="../images/مزات طوبى باردة/tuba-cloud-5.png" class="gallery-item  " alt=""> 
