--- a/html/Tuba-forn-categories.html
+++ b/html/Tuba-forn-categories.html
@@ -16,8 +16,13 @@
     <section class="header header-tubaforn ">
         <div class="container-header-categories ">
             <div class="icone-header ">
-                <img src="../images/icons/instgram-icon-wiht.svg"    width="50px" alt="">
-                <img src="../images/icons/logo-witht.svg" width="90px"  alt="">
+                <div class=" title-categories ">
+                    <h1> فرن طوبى   </h1>
+                    <p>  هنا سيتم وصف القسم بكلمات بسيطة وباسلوب تحفز المستخرم للشراء يحتوي هذا القسم على انواع السلطة اللذيذة بانواع مختلفة ولذيذة وبأطباق متعددة  
+                    </p>
+              </div>
+                <!-- <img src="../images/icons/instgram-icon-wiht.svg"    width="50px" alt="">
+                <img src="../images/icons/logo-witht.svg" width="90px"  alt=""> -->
             </div>
             
                 <h1> فرن توبى   </h1>
