--- a/html/Tuba-hot-Categories .html
+++ b/html/Tuba-hot-Categories .html
@@ -16,8 +16,13 @@
     <section class="header header-hot ">
         <div class="container-header-categories ">
             <div class="icone-header ">
-                <img src="../images/icons/instgram-icon-wiht.svg"    width="50px" alt="">
-                <img src="../images/icons/logo-witht.svg" width="90px"  alt="">
+                <div class=" title-categories ">
+                    <h1> مزات طوبى الساخنة  </h1>
+                    <p>  هنا سيتم وصف القسم بكلمات بسيطة وباسلوب تحفز المستخرم للشراء يحتوي هذا القسم على انواع السلطة اللذيذة بانواع مختلفة ولذيذة وبأطباق متعددة  
+                    </p>
+              </div>
+                <!-- <img src="../images/icons/instgram-icon-wiht.svg"    width="50px" alt="">
+                <img src="../images/icons/logo-witht.svg" width="90px"  alt=""> -->
             </div>
             
                 <!-- <h1>  مزات طوبى الساخنة  </h1> -->
@@ -29,8 +34,8 @@
    <section class="gallary py-3 px-0  ">
      <div class="container-fluid">
             <div class="row p-2 border-bottom" data-aos-duration="500" data-aos="fade-up">
-                <div class="col col-4">
-                    <img src="../images/مزات طوبى الساخنة/tubahot-1.png" class=" gallery-item img-thumbnail " alt=""> 
+                <div class="col col-5">
+                    <img src="../images/مزات طوبى الساخنة/tubahot-1.png" class=" gallery-item  " alt=""> 
                 </div>
                 <div class="col mmm">
                     <img src="../images/مزات طوبى الساخنة/tuba-hot-1.png" class="gallery-item  " alt=""> 
@@ -38,8 +43,8 @@
             </div> 
 
             <div class="row p-2 border-bottom " data-aos-duration="500" data-aos="fade-up">
-                <div class="col col-4">
-                    <img src="../images/مزات طوبى الساخنة/tubahot-2.png" class=" gallery-item img-thumbnail " alt=""> 
+                <div class="col col-5">
+                    <img src="../images/مزات طوبى الساخنة/tubahot-2.png" class=" gallery-item  " alt=""> 
                 </div>
                 <div class="col mmm">
                     <img src="../images/مزات طوبى الساخنة/tuba-hot-2.png" class="gallery-item  " alt=""> 
@@ -47,8 +52,8 @@
             </div> 
 
             <div class="row p-2 border-bottom " data-aos-duration="500" data-aos="fade-up">
-                <div class="col col-4 ">
-                    <img src="../images/مزات طوبى الساخنة/tubahot-3.png" class=" gallery-item img-thumbnail " alt=""> 
+                <div class="col col-5">
+                    <img src="../images/مزات طوبى الساخنة/tubahot-3.png" class=" gallery-item  " alt=""> 
                 </div>
                 <div class="col mmm">
                     <img src="../images/مزات طوبى الساخنة/tuba-hot-3.png" class="gallery-item  " alt=""> 
@@ -56,8 +61,8 @@
             </div> 
 
             <div class="row p-2 border-bottom " data-aos-duration="500" data-aos="fade-up">
-                <div class="col col-4">
-                    <img src="../images/مزات طوبى الساخنة/tubahot-4.png" class=" gallery-item img-thumbnail " alt=""> 
+                <div class="col col-5">
+                    <img src="../images/مزات طوبى الساخنة/tubahot-4.png" class=" gallery-item  " alt=""> 
                 </div>
                 <div class="col mmm">
                     <img src="../images/مزات طوبى الساخنة/tuba-hot-4.png" class="gallery-item  " alt=""> 
@@ -65,8 +70,8 @@
             </div> 
 
             <div class="row p-2 border-bottom " data-aos-duration="500" data-aos="fade-up">
-                <div class="col col-4">
-                    <img src="../images/مزات طوبى الساخنة/tubahot-5.png" class=" gallery-item img-thumbnail " alt=""> 
+                <div class="col col-5">
+                    <img src="../images/مزات طوبى الساخنة/tubahot-5.png" class=" gallery-item  " alt=""> 
                 </div>
                 <div class="col mmm">
                     <img src="../images/مزات طوبى الساخنة/tuba-hot-5.png" class="gallery-item  " alt=""> 
@@ -74,8 +79,8 @@
             </div> 
 
             <div class="row p-2 border-bottom " data-aos-duration="500" data-aos="fade-up">
-                <div class="col col-4">
-                    <img src="../images/مزات طوبى الساخنة/tubahot-6.png" class=" gallery-item img-thumbnail " alt=""> 
+                <div class="col col-5">
+                    <img src="../images/مزات طوبى الساخنة/tubahot-6.png" class=" gallery-item " alt=""> 
                 </div>
                 <div class="col mmm">
                     <img src="../images/مزات طوبى الساخنة/tuba-hot-6.png" class="gallery-item  " alt=""> 
@@ -83,8 +88,8 @@
             </div> 
 
             <div class="row p-2 border-bottom " data-aos-duration="500" data-aos="fade-up">
-                <div class="col col-4">
-                    <img src="../images/مزات طوبى الساخنة/tubahot-7.png" class=" gallery-item img-thumbnail " alt=""> 
+                <div class="col col-5">
+                    <img src="../images/مزات طوبى الساخنة/tubahot-7.png" class=" gallery-item " alt=""> 
                 </div>
                 <div class="col mmm">
                     <img src="../images/مزات طوبى الساخنة/tuba-hot-7.png" class="gallery-item  " alt=""> 
@@ -92,8 +97,8 @@
             </div> 
 
             <div class="row p-2 border-bottom " data-aos-duration="500" data-aos="fade-up">
-                <div class="col col-4 ">
-                    <img src="../images/مزات طوبى الساخنة/tubahot-8.png" class=" gallery-item img-thumbnail " alt=""> 
+                <div class="col col-5">
+                    <img src="../images/مزات طوبى الساخنة/tubahot-8.png" class=" gallery-item " alt=""> 
                 </div>
                 <div class="col mmm">
                     <img src="../images/مزات طوبى الساخنة/tuba-hot-8.png" class="gallery-item  " alt=""> 
